# rag-experiments

./: .gitignore  notes.txt  pyproject.toml  requirements.txt
data/: dataengineering.txt
scripts/: 1. rag-e2e-workflow.ipynb
