[project]
name = "rag-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "chromadb>=1.5.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "onnxruntime>=1.17.3,<1.18",
    "protobuf>=3.20,<3.21",
]
